Increased carousel dot click area, fixed carousel buttons overlap

--- a/assets/images.css
+++ b/assets/images.css
@@ -211,10 +211,6 @@
     width: auto;
     height: 100%;
   }
-
-  .images .carousel .images__content {
-    padding-top: 9px;
-  }
 }
 
 @media (min-width: 1920px) {
